# link_forge

./: .gitignore  CMakeLists.txt  link_forge.sln
link_forge/: ARCHITECTURE.md  CHECKLIST.md  GET_STARTED.md  QUICKSTART.md  README.md  Version.h  link_forge.cpp  link_forge.h  link_forge.qrc  link_forge.rc  link_forge.ui  link_forge.vcxproj  link_forge.vcxproj.filters  main.cpp
link_forge/application/: main_controller.cpp  main_controller.h  message_model.cpp  message_model.h
link_forge/core/: channel_manager.cpp  channel_manager.h  communication_manager.cpp  communication_manager.h  iprotocol.h  iprotocol_plugin.h  itransport.h  itransport_plugin.h  plugin_manager.cpp  plugin_manager.h  protocol_factory.cpp  protocol_factory.h  transport_factory.cpp  transport_factory.h  type_names.h
link_forge/docs/: API.md  SUMMARY.md  TESTING.md
link_forge/examples/: ExampleUsage.cpp
link_forge/protocol/: custom_protocol.cpp  custom_protocol.h  frame_parser.cpp  frame_parser.h  frame_protocol.cpp  frame_protocol.h  modbus_protocol.cpp  modbus_protocol.h
link_forge/tests/: LinkForgeTests.pro  main_tests.cpp  test_link_forge.cpp  tests.pro  tst_factories.h  tst_frame_parser.h  tst_frame_protocol.h
link_forge/transport/: can_transport.cpp  can_transport.h  serial_transport.cpp  serial_transport.h  socket_transport.cpp  socket_transport.h
link_forge/utils/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h
link_forge/x64/Debug/: link_forge.exe.recipe  link_forge.ilk  vc143.idb
link_forge/x64/Debug/link_forge.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  link_forge.lastbuildstate  link_forge.write.1u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
link_forge/x64/Debug/qt/: qtvars.xml
link_forge/x64/Debug/qt/moc/: moc_link_forge.cpp
link_forge/x64/Debug/qt/qmake/: .qmake.stash  props.txt  qtvars.pro  qtvars.vcxproj
link_forge/x64/Debug/qt/rcc/: qrc_link_forge.cpp
link_forge/x64/Debug/qt/uic/: ui_link_forge.h
